#37 - feat(admin): add DTOs, entities, mappers and common exceptions